--- a/template/node/Cargo.toml
+++ b/template/node/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "frontier-template-node"
+name = "me-chain"
 version = "0.0.0"
 authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
 edition = "2021"
